<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myAlly</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="cd_crisisButton">Crisis Button</string>
    <string name="cd_diarycardButton">Diary Card Button</string>
    
    <!-- Generic -->
    <string name="cd_continueButton">Continue Button</string>

    <!-- Thought Diffusion Activity -->
    <string name="default_thought">My Thought</string>

    <!-- Breathing Activity -->
    <string name="hr_desc">Your current heart rate:</string>
    <string name="cd_balloon">Breathing Balloon</string>

    <!-- Mind Jar Activity -->
    <string name="cd_mindjar">Mind Jar</string>

    <!-- Diary Card Activity -->
    <string name="initial_value">0</string>
    <string name="cd_diarycard_bkg">Diary Card Book</string>
    <string name="cd_anger">Anger Emotion</string>
    <string name="cd_anxious">Anxious Emotion</string>
    <string name="cd_fear">Fear Emotion</string>
    <string name="cd_happy">Happy Emotion</string>
    <string name="cd_misery">Misery Emotion</string>
    <string name="cd_sad">Sad Emotion</string>
    <string name="cd_shame">Shame Emotion</string>

    <!-- Subjective Measure -->
    <string name="subj_measure">How are you feeling right now?</string>

    <!-- Objective Measure -->
    <string name="default_text">--</string>
    <string name="obj_instruction">Let\'s measure your heart rate now! Please put your finger on the camera lens</string>

    <string name="cd_alcohol">Alcoholic Urge</string>
    <string name="cd_selfharm">Self Harm Urge</string>
    <string name="cd_drug">Drug Use Urge</string>
    
</resources>