<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SaddleBrown"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/urge_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/cd_diarycard_bkg"
        android:src="@drawable/diary_card_bkg" />

    <ImageView
        android:id="@+id/urgeContinue"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="55dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/cd_continueButton"
        android:onClick="onContinueClick"
        android:src="@drawable/continue_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <ImageView
                android:id="@+id/urge_alcohol"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/cd_alcohol"
                android:src="@drawable/cocktail" />

            <SeekBar
                android:id="@+id/seekBarAlcohol"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@drawable/seekbar_thumb" />

            <TextView
                android:id="@+id/seekTextAlcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <ImageView
                android:id="@+id/urge_drug"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/cd_drug"
                android:src="@drawable/drug" />

            <SeekBar
                android:id="@+id/seekBarDrug"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@drawable/seekbar_thumb" />
            <TextView
                android:id="@+id/seekTextDrug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <ImageView
                android:id="@+id/urge_selfharm"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/cd_selfharm"
                android:src="@drawable/self_harm" />

            <SeekBar
                android:id="@+id/seekBarHarm"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@drawable/seekbar_thumb" />

            <TextView
                android:id="@+id/seekTextHarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_value" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>